@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "Sorte huller er ikke tilladt i denne dimension.",
-"gui.overpowered.black_hole.notify_players": "§5Singularitets begivenhed§r blev påvist ved koordinater: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5Singularitets begivenhed§r blev påvist ved koordinater: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "Linse",
 "gui.overpowered.energy_suspension_bridge.rotate": "Rotere",
 "gui.overpowered.bridge_message.checking": "Fejl",
