@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "Black Holes are not allowed in this Dimension.",
-"gui.overpowered.black_hole.notify_players": "§5Singularity Event§r detected at coordinates: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5Singularity Event§r detected at coordinates: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "Lens",
 "gui.overpowered.energy_suspension_bridge.rotate": "Rotate",
 "gui.overpowered.bridge_message.checking": "Error",
