@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "इस आयाम में ब्लैक होल की अनुमति नहीं है।",
-"gui.overpowered.black_hole.notify_players": "§5विलक्षण घटना§r निर्देशांक में पाया गया: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5विलक्षण घटना§r निर्देशांक में पाया गया: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "लेंस",
 "gui.overpowered.energy_suspension_bridge.rotate": "घुमाएँ",
 "gui.overpowered.bridge_message.checking": "त्रुटि",
