@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "Buracos negros não são permitidos nesta dimensão.",
-"gui.overpowered.black_hole.notify_players": "§5Evento de singularidade§r foi detectada nas coordenadas: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5Evento de singularidade§r foi detectada nas coordenadas: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "Lente",
 "gui.overpowered.energy_suspension_bridge.rotate": "Rodar",
 "gui.overpowered.bridge_message.checking": "Erro",
