@@ -116,7 +116,7 @@
 "stat.overpowered.black_hole_events": "Singularity Events",
 
 "gui.overpowered.black_hole.not_allowed_in_this_dimension": "இந்த பரிமாணத்தில் கருப்பு துளைகள் அனுமதிக்கப்படவில்லை.",
-"gui.overpowered.black_hole.notify_players": "§5ஒருமை நிகழ்வு§r ஆயக்கட்டுகளில் கண்டறியப்பட்டது: %s , %1$s , %2$s",
+"gui.overpowered.black_hole.notify_players": "§5ஒருமை நிகழ்வு§r ஆயக்கட்டுகளில் கண்டறியப்பட்டது: %s , %s , %s",
 "gui.overpowered.energy_suspension_bridge.lens": "லென்ஸ்",
 "gui.overpowered.energy_suspension_bridge.rotate": "சுழற்று",
 "gui.overpowered.bridge_message.checking": "பிழை",
